--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ h1 {
 }
 
 h2 {
-  font-size: 5.1em;
+  font-size: 4em;
+  font-weight:800;
   line-height: 1em;
   letter-spacing: .03em;
   margin-bottom: 2px;
@@ -48,8 +49,8 @@ h3 {
 
 h4 {
   font-weight: normal;
-  font-size: .7em;
-  letter-spacing: .4em;
+  font-size: .5em;
+  letter-spacing: .6em;
   margin-bottom: 9px;
   line-height: 1em;
 }
@@ -95,7 +96,7 @@ img {
   background: url("https://s3.amazonaws.com/learn-verified/cover.jpg");
   background-size: 100%;
   text-align: center;
-} 
+}
 
 #back {
   background: rgba(247,211,27,1);
