--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: 'Avenir Next Condensed';
   src: url('https://s3.amazonaws.com/learn-verified/Avenir+Next+Condensed.ttc');
+  font-weight: normal;
+  font-style: normal;
 }
 
 * {
@@ -21,7 +23,7 @@ body {
   background: -ms-linear-gradient(top,  rgba(79,79,79,1) 0%,rgba(19,19,19,1) 57%,rgba(19,19,19,1) 100%); /* IE10+ */
   background: linear-gradient(to bottom,  rgba(79,79,79,1) 0%,rgba(19,19,19,1) 57%,rgba(19,19,19,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f4f4f', endColorstr='#131313',GradientType=0 ); /* IE6-8 */
-  font-family: 'Avenir Next Condensed', 'Arial Narrow', sans-serif;
+  font-family: 'Avenir Next Condensed', Helvetica, sans-serif;
   font-size: 100%;
 }
 
@@ -33,8 +35,7 @@ h1 {
 }
 
 h2 {
-  font-size: 4em;
-  font-weight:800;
+  font-size: 5.1em;
   line-height: 1em;
   letter-spacing: .03em;
   margin-bottom: 2px;
@@ -49,9 +50,8 @@ h3 {
 
 h4 {
   font-weight: normal;
-  font-size: .5em;
-  letter-spacing: .6em;
-  margin-bottom: 9px;
+  font-size: .7em;
+  margin-bottom: 18px;
   line-height: 1em;
 }
 
