--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ p {
 
 span {
   display: inline-block;
-  font-size: 0.5;
+  font-size: 0.5em;
   line-height: 1em;
   letter-spacing: .35em;
   vertical-align: top;
