--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ h4 {
   font-weight: normal;
   font-size: .4em;
   letter-spacing: .4em;
+  margin-top: auto;
   margin-bottom: 9px;
   line-height: 1em;
 }
