--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h4 {
   font-weight: normal;
   font-size: .4em;
   letter-spacing: .4em;
-  margin-top: auto;
+  margin-top: 9px;
   margin-bottom: 9px;
   line-height: 1em;
 }
