--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'Avenir Next Condensed';
   src: url('https://s3.amazonaws.com/learn-verified/Avenir+Next+Condensed.ttc');
-  font-weight: normal;
-  font-style: normal;
 }
 
 * {
@@ -23,7 +21,7 @@ body {
   background: -ms-linear-gradient(top,  rgba(79,79,79,1) 0%,rgba(19,19,19,1) 57%,rgba(19,19,19,1) 100%); /* IE10+ */
   background: linear-gradient(to bottom,  rgba(79,79,79,1) 0%,rgba(19,19,19,1) 57%,rgba(19,19,19,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f4f4f', endColorstr='#131313',GradientType=0 ); /* IE6-8 */
-  font-family: 'Avenir Next Condensed', Helvetica, sans-serif;
+  font-family: 'Avenir Next Condensed', 'Arial Narrow', sans-serif;
   font-size: 100%;
 }
 
@@ -35,7 +33,8 @@ h1 {
 }
 
 h2 {
-  font-size: 5.1em;
+  font-size: 3.0em;
+  font-weight:900;
   line-height: 1em;
   letter-spacing: .03em;
   margin-bottom: 2px;
@@ -50,13 +49,15 @@ h3 {
 
 h4 {
   font-weight: normal;
-  font-size: .7em;
-  margin-bottom: 18px;
+  font-size: .4em;
+  letter-spacing: .4em;
+  margin-top: 9px;
+  margin-bottom: 9px;
   line-height: 1em;
 }
 
 p {
-  font-size: .9em;
+  font-size: .7em;
   line-height: 1.8em;
   letter-spacing: .103em;
   margin-bottom: 15px;
@@ -64,7 +65,7 @@ p {
 
 span {
   display: inline-block;
-  font-size: 1em;
+  font-size: 0.7em;
   line-height: 1em;
   letter-spacing: .35em;
   vertical-align: top;
